# roguey

./: .clang-format  .pre-commit-config.yaml  CMakeLists.txt  LICENSE.md  README.md  notes.md
include/: dice.hpp  dungeon.hpp  game.hpp  registry.hpp  renderer.hpp  script_engine.hpp  state_machine.hpp  systems.hpp  types.hpp
include/sol/: sol.hpp
include/states/: dungeon.hpp  game_over.hpp  help.hpp  inventory.hpp  setup.hpp  stats.hpp  tick.hpp  victory.hpp
include/types/: color.hpp  entity.hpp  game.hpp  geometry.hpp  grid.hpp  items.hpp
scripts/: game.lua
scripts/class/: mage.lua  rogue.lua  warrior.lua
scripts/items/: gold.lua  healing_potion.lua  strength_potion.lua
scripts/levels/: dungeon.lua  forest.lua
scripts/monsters/: boss.lua  orc.lua  slime.lua
src/: color.cpp  dungeon.cpp  game.cpp  main.cpp  registry.cpp  renderer.cpp  script_engine.cpp  state_machine.cpp  systems.cpp
src/states/: dungeon.cpp  game_over.cpp  help.cpp  inventory.cpp  setup.cpp  stats.cpp  tick.cpp  victory.cpp
